WIP validari si modificari up to i4

--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -645,7 +645,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cm7a-4" name="cm7a" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan O'rta maxsus/kasb-hunar ta'limi</label>
+                        <label for="cm7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta / kasb-hunar ta'limi</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cm7a-5" name="cm7a" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -666,7 +666,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>CM7b. Onaning hozirgi ma'lumoti darajasi</div>
+                <div>CM7b. Hozirgi vaqtda onaning ta'lim darajasi/ma'lumoti</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cm7b-1" name="cm7b" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -682,7 +682,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cm7b-4" name="cm7b" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan O'rta maxsus/kasb-hunar ta'limi</label>
+                        <label for="cm7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta / kasb-hunar ta'limi</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cm7b-5" name="cm7b" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1441,7 +1441,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7a-4" name="ct7a" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o'rta maxsus/kasb-hunar ta'limi</label>
+                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta / kasb-hunar ta'limi</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7a-5" name="ct7a" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1462,7 +1462,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>CT7b. Otaning hozirgi ma'lumot darajasi</div>
+                <div>CT7b. Hozirgi vaqtda otaning ta'lim darajasi/ma'lumoti</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="ct7b-1" name="ct7b" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1478,7 +1478,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7b-4" name="ct7b" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan o'rta maxsus/kasb-hunar ta'limi</label>
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta / kasb-hunar ta'limi</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7b-5" name="ct7b" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1901,35 +1901,35 @@
 
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>CG1d. Qarindoshlik aloqalari:</div>
+                <div>CG1d. Qarindoshlik munosabatlari</div>
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-1" name="cg1d" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-1" class="ms-2 text-sm text-gray-900">1. Aka / opa (2-darajali)</label>
+                        <label for="cg1d-1" class="ms-2 text-sm text-gray-900">1. Aka-uka/opa-singil (2-darajali qarindoshlik)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-2" name="cg1d" value="2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-2" class="ms-2 text-sm text-gray-900">2. Bobo / buvisi (2-darajali)</label>
+                        <label for="cg1d-2" class="ms-2 text-sm text-gray-900">2. Buva/buvi (2-darajali qarindoshlik)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-3" name="cg1d" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-3" class="ms-2 text-sm text-gray-900">3. Amaki / xola (3-darajali)</label>
+                        <label for="cg1d-3" class="ms-2 text-sm text-gray-900">3. Amaki-tog'a/amma-xola (3-darajali qarindoshlik)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-4" name="cg1d" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-4" class="ms-2 text-sm text-gray-900">4. Buva va buva (3-darajali)</label>
+                        <label for="cg1d-4" class="ms-2 text-sm text-gray-900">4. Katta buza/katta buvi (qarindoshlikning 3-bosqichi)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-5" name="cg1d" value="5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-5" class="ms-2 text-sm text-gray-900">5. Amakivachcha (4-darajali)</label>
+                        <label for="cg1d-5" class="ms-2 text-sm text-gray-900">5. Amakivachcha/opa-singil (4-darajali qarindoshlik)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-6" name="cg1d" value="6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-6" class="ms-2 text-sm text-gray-900">6. Boshqa 4-darajali qarindosh yoki undan uzoqroq qarindosh</label>
+                        <label for="cg1d-6" class="ms-2 text-sm text-gray-900">6. Qarindoshlikning 4-bosqichidagi boshqa qarindoshi yoki uzoqroq qarindoshi</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="cg1d-7" name="cg1d" value="7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="cg1d-7" class="ms-2 text-sm text-gray-900">7. O'gay qarindoshlar (qayta nikoh orqali o'rnatilgan oilaviy munosabatlar)</label>
+                        <label for="cg1d-7" class="ms-2 text-sm text-gray-900">7. Qarindosh emas (nikoh yoki qayta turmush qurish orqali)</label>
                     </div>
                 </div>
             </div>
@@ -2217,7 +2217,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>CG7b. Vasiyning hozirgi ma'lumot darajasi</div>
+                <div>CG7b. Hozirgi vaqtda vasiyning ta'lim darajasi/ma'lumoti</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="cg7b-1" name="cg7b" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -3322,19 +3322,19 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>2b. Bola qaysi sinfda edi?<small class="mb-1 my-2 block italic text-red-500">TAYYORLOV GURUHI UCHUN 0 (NOL) QO'YING</small></div>
+NA
                 <div>
                     <select id="qeduc2b" name="qeduc2b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
-                        <option value="0>0</option>
-                        <option value="1>1</option>
-                        <option value="2>2</option>
-                        <option value="3>3</option>
-                        <option value="4>4</option>
-                        <option value="5>5</option>
-                        <option value="6>6</option>
-                        <option value="7>7</option>
-                        <option value="8>8</option>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
                         <option value="9">9</option>
                         <option value="10">10</option>
                         <option value="11">11</option>
@@ -4951,7 +4951,7 @@
                 <div>
                     <p class="mb-2">AGAR LK22_2 DA INTELLEKTUAL NOGIRONLIK BELGILLANGAN B'OLSA
                     <p>
-                        LK22_2m. Nogironlik to'g'risidagi guvohnomaga ko'ra, bolada nogironlikning qanday darajasi?
+                        LK22_2m. Ma'lumotnomaga ko'ra, bolada ruhiy kasallikning qaysi shakli mavjud
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -5171,7 +5171,7 @@
             <small class="my-2 block italic text-red-500">Bu voyaga yetmagan onalarning farzandlari emas, balki o'zi voyaga yetmagan bo'la turib ona bo'lgan bolalarga tegishlidir.</small>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>LK22_9. Bolaning muqobil vasiylik tizimida (muassasa/xizmat turidan qatiy nazar) aka-ukasi/opa-singlisi bor</div>
+                <div>LK22_9. Bola quyidagi zaif guruhga tegishli - Bolaning muqobil vasiylik tizimida (muassasa/xizmat turidan qatiy nazar) aka-ukasi/opa-singlisi bor</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="lk22_9-1" name="lk22_9" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5185,7 +5185,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>LK22_10. Bolaning aka-ukasi/opa-singlisi bir xil muassasada yoki xizmat turida joylashtirilgan</div>
+                <div>LK22_10. Bola quyidagi zaif guruhga tegishli - Bolaning aka-ukasi/opa-singlisi bir xil muassasada yoki xizmat turida joylashtirilgan</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="lk22_10-1" name="lk22_10" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5194,6 +5194,20 @@
                     <div class="flex items-center">
                         <input type="radio" id="lk22_10-2" name="lk22_10" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="lk22_10-2" class="ms-2 text-sm text-gray-900">0. Yo'q</label>
+                    </div>
+                </div>
+            </div>
+
+            <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div>0. Yo'q. 3. Kundalik faoliyatida bola...?</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <div class="flex items-center">
+                        <input type="radio" id="lk22_12-1" name="lk22_12" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="lk22_12-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input type="radio" id="lk22_12-2" name="lk22_12" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="lk22_12-2" class="ms-2 text-sm text-gray-900">0. Yo'q</label>
                     </div>
                 </div>
             </div>
@@ -5393,15 +5407,15 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk1-1" name="edk1" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk1-1" class="ms-2 text-sm text-gray-900">1. Umumiy ta'lim maktab</label>
+NA
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-2" name="edk1" value="2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk1-2" class="ms-2 text-sm text-gray-900">2. Ixtisoslashtirilgan ta'lim</label>
+NA
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-3" name="edk1" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk1-3" class="ms-2 text-sm text-gray-900">3. Inklyuziv ta'lim</label>
+NA
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-4" name="edk1" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5419,7 +5433,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk2-1" name="edk2" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk2-1" class="ms-2 text-sm text-gray-900">1. Boshlang'ich ta'lim (1-4-sinflar)</label>
+                        <label for="edk2-1" class="ms-2 text-sm text-gray-900">1. Boshlang'ich ta'lim (maktabga tayyorlov guruhi va 1-4 sinflar)</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk2-2" name="edk2" value="2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5437,19 +5451,19 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>EDK3. Qaysi sinfga?<small class="my-2 block italic text-red-500">TAYYORLOV GURUHI UCHUN 0 (NOL) QO'YING</small></div>
+NA
                 <div>
                     <select id="edk3" name="edk3" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
-                        <option value="0>0</option>
-                        <option value="1>1</option>
-                        <option value="2>2</option>
-                        <option value="3>3</option>
-                        <option value="4>4</option>
-                        <option value="5>5</option>
-                        <option value="6>6</option>
-                        <option value="7>7</option>
-                        <option value="8>8</option>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
                         <option value="9">9</option>
                         <option value="10">10</option>
                         <option value="11">11</option>
@@ -6185,7 +6199,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>SQ5. O'tgan olti oy ichida bola mustaqil hayot faoliyatidan foyda ko'rdimi?<small class="my-2 block italic text-red-500">Mustaqil hayot faoliyati ovqat tayyorlash va uni taqdim etish, tozalash ishlarini yuritish, kir yuvish mashinasidan foydalanish, kiyimlarni dazmollash yoki tahlash, mahsulotlarni xarid qilish, puldan foydalanish va byudjetni boshqarish kabi vazifalarni o'z ichiga oladi.</small></div>
+                <div>SQ5. So'nggi olti oy ichida bola mustaqil hayot ko'nikmalarini rivojlantirish tadbirlarida qatnashganmi?<small class="my-2 block italic text-red-500">Mustaqil hayot faoliyati ovqat tayyorlash va uni taqdim etish, tozalash ishlarini yuritish, kir yuvish mashinasidan foydalanish, kiyimlarni dazmollash yoki tahlash, mahsulotlarni xarid qilish, puldan foydalanish va byudjetni boshqarish kabi vazifalarni o'z ichiga oladi.</small></div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input type="radio" id="sq5-1" name="sq5" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
