--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -2207,11 +2207,11 @@ NA
                         <label for="qeduc2-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="qeduc2-2" type="radio" value="2" name="qeduc2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="qeduc2-2" type="radio" value="2" name="qeduc2" disabled class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="qeduc2-2" class="ms-2 text-sm text-gray-900">2. Yo'q</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="qeduc2-3" type="radio" value="7" name="qeduc2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="qeduc2-3" type="radio" value="7" name="qeduc2" disabled class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
                         <label for="qeduc2-3" class="ms-2 text-sm text-gray-900">7. Qo'llanilmaydi, bola 7 yoshdan kichik</label>
                     </div>
                 </div>
@@ -2287,7 +2287,7 @@ NA
                 <div>
                     <select id="qeduc2b" name="qeduc2b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
-                        <option value="0">0</option>
+NA
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -2359,7 +2359,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>3. Bola boshqa maktab-internatidan ko'chirildimi?</div>
+                <div>4. Bola boshqa maktab-internatidan ko'chirildimi?</div>
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="qeduc4-1" type="radio" value="1" name="qeduc4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -2377,7 +2377,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>3a. Bolaning boshqa maktab- internatdan ko'chirilishiga nima sabab bo'ldi?</div>
+                <div>4a. Bolaning boshqa maktab- internatdan ko'chirilishiga nima sabab bo'ldi?</div>
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="qeduc4a-1" type="radio" value="1" name="qeduc4a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -3153,7 +3153,7 @@ NA
                 <div>
                     <select id="sch2" name="sch2" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
-                        <option value="0">0</option>
+NA
                         <option value="1">1</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
@@ -4270,7 +4270,8 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>LK22_3_9. Yozib ko'rsatilsin: … </div><div class="col-span-1 flex items-center gap-4">
+                <div>LK22_3_9. Yozib ko'rsatilsin: … </div>
+                <div class="col-span-1 flex items-center gap-4">
                     <textarea id="lk22_3_9" name="lk22_3_9" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
                 </div>
             </div>
@@ -4333,6 +4334,20 @@ NA
                 </div>
             </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+NA
+                <div class="col-span-1 flex items-center gap-4">
+                    <div class="flex items-center">
+                        <input id="lk22_12-1" type="radio" value="1" name="lk22_12" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="lk22_12-1" class="ms-2 text-sm text-gray-900">1. Ha</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="lk22_12-2" type="radio" value="0" name="lk22_12" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="lk22_12-2" class="ms-2 text-sm text-gray-900">0. Yo'q</label>
+                    </div>
+                </div>
+            </div>
+
             <h3 class="mt-10 text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.3. BOLANING HOZIRGI SALOMATLIGI AHVOLI</h3>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
@@ -4349,7 +4364,11 @@ NA
                     </div>
                     <div class="flex items-center">
                         <input id="qhealthp3-3" type="radio" value="3" name="qhealthp3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="qhealthp3-3" class="ms-2 text-sm text-gray-900">3. To'liq boshqalarga bog'liq</label>
+                        <label for="qhealthp3-3" class="ms-2 text-sm text-gray-900">3. Yoshi tufayli butunlay boshqalarga bog'liq</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="qhealthp3-4" type="radio" value="4" name="qhealthp3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="qhealthp3-4" class="ms-2 text-sm text-gray-900">4. Nogironlik tufayli butunlay boshqalarga bog'liq</label>
                     </div>
                 </div>
             </div>
@@ -5380,7 +5399,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div>SK7. Ota-onalar/vasiylar bolani umumiy ta'lim maktabiga o'tkazish uchun ariza berganmi?</div>
+                <div>SK12. Ota-onalar/vasiylar bolani umumiy ta'lim maktabiga o'tkazish uchun ariza berganmi?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="sk12-1" type="radio" value="1" name="sk12" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5394,7 +5413,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div>SK8. Bolani umumiy ta'lim maktabiga o'tkazishni qo'llab-quvvatlovchi psixologik-tibbiy-pedagogik komissiyaning tavsiyasi bormi?</div>
+                <div>SK13. Bolani umumiy ta'lim maktabiga o'tkazishni qo'llab-quvvatlovchi psixologik-tibbiy-pedagogik komissiyaning tavsiyasi bormi?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="sk13-1" type="radio" value="1" name="sk13" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5408,7 +5427,7 @@ NA
             </div>
 
             <div class="grid grid-cols-2 gap-4 mt-10">
-                <div>SK9. O'tgan olti oy ichida bolaning mahallada vaqt o'tkazish va oddiy bolalar bilan muloqot qilish imkoniyati bo'ldimi?</div>
+                <div>SK14. O'tgan olti oy ichida bolaning mahallada vaqt o'tkazish va oddiy bolalar bilan muloqot qilish imkoniyati bo'ldimi?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="sk14-1" type="radio" value="1" name="sk14" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
