--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -1441,7 +1441,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7a-4" name="ct7a" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary education</label>
+                        <label for="ct7a-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7a-5" name="ct7a" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1462,7 +1462,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>CT7b. Father's current education</div>
+                <div>CT7b. Father’s current education</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="ct7b-1" name="ct7b" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -1478,7 +1478,7 @@
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7b-4" name="ct7b" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary education</label>
+                        <label for="ct7b-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="ct7b-5" name="ct7b" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -2766,7 +2766,7 @@
                 <div>
                     <select id="sa5t" name="sa5t" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
-                        <option value="11">11. Children’s home (Baby home)</option>
+                        <option value="11">11. Baby home</option>
                         <option value="12">12. Mehribonlik house</option>
                         <option value="13">13. Muruvvat house for children with disabilities</option>
                         <option value="14">14. SOS children’s villages</option>
@@ -3322,19 +3322,19 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>2b. What grade was the child in?<small class="mb-1 my-2 block italic text-red-500">FILL IN 0 (ZERO) FOR PREPARATORY CLASS</small></div>
+                <div>2b. What grade was the child in?<small class="mb-1 my-2 block italic text-red-500">0. Preparatory class</small></div>
                 <div>
                     <select id="qeduc2b" name="qeduc2b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
-                        <option value="0>0</option>
-                        <option value="1>1</option>
-                        <option value="2>2</option>
-                        <option value="3>3</option>
-                        <option value="4>4</option>
-                        <option value="5>5</option>
-                        <option value="6>6</option>
-                        <option value="7>7</option>
-                        <option value="8>8</option>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
                         <option value="9">9</option>
                         <option value="10">10</option>
                         <option value="11">11</option>
@@ -4129,7 +4129,7 @@
                         <td class="p-1">
                             <select id="sh3_s1b" name="sh3_s1b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4185,7 +4185,7 @@
                         <td class="p-1">
                             <select id="sh3_s2b" name="sh3_s2b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4241,7 +4241,7 @@
                         <td class="p-1">
                             <select id="sh3_s3b" name="sh3_s3b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4297,7 +4297,7 @@
                         <td class="p-1">
                             <select id="sh3_s4b" name="sh3_s4b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4353,7 +4353,7 @@
                         <td class="p-1">
                             <select id="sh3_s5b" name="sh3_s5b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4409,7 +4409,7 @@
                         <td class="p-1">
                             <select id="sh3_s6b" name="sh3_s6b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4465,7 +4465,7 @@
                         <td class="p-1">
                             <select id="sh3_s7b" name="sh3_s7b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4521,7 +4521,7 @@
                         <td class="p-1">
                             <select id="sh3_s8b" name="sh3_s8b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4577,7 +4577,7 @@
                         <td class="p-1">
                             <select id="sh3_s9b" name="sh3_s9b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4633,7 +4633,7 @@
                         <td class="p-1">
                             <select id="sh3_s10b" name="sh3_s10b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4689,7 +4689,7 @@
                         <td class="p-1">
                             <select id="sh3_csb" name="sh3_csb" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                                 <option value="-9">--- choose ---</option>
-                                <option value="11">11. Children’s home (Baby home)</option>
+                                <option value="11">11. Baby home</option>
                                 <option value="12">12. Mehribonlik house</option>
                                 <option value="13">13. Muruvvat house for children with disabilities</option>
                                 <option value="14">14. SOS children’s villages</option>
@@ -4951,7 +4951,7 @@
                 <div>
                     <p class="mb-2">IF MENTAL DISABILITY IS CHECKED IN LK22_2
                     <p>
-                        LK22_2m. According to the certificate, what degree of disability does the child experience?
+                        LK22_2m. According to the certificate, what degree of mental disability does the child have?
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
@@ -5198,6 +5198,20 @@
                 </div>
             </div>
 
+            <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div>0. No. 3. In his/her daily activities, is the child...?</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <div class="flex items-center">
+                        <input type="radio" id="lk22_12-1" name="lk22_12" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="lk22_12-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input type="radio" id="lk22_12-2" name="lk22_12" value="0" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="lk22_12-2" class="ms-2 text-sm text-gray-900">0. No</label>
+                    </div>
+                </div>
+            </div>
+
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">9. THE CHILD'S CURRENT HEALTH STATUS</h2>
 
             <p>QHEALTHP: At present...</p>
@@ -5393,15 +5407,15 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk1-1" name="edk1" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk1-1" class="ms-2 text-sm text-gray-900">1. In mainstream education</label>
+                        <label for="edk1-1" class="ms-2 text-sm text-gray-900">1. In mainstream education institution, without inclusive classes/groups</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-2" name="edk1" value="2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk1-2" class="ms-2 text-sm text-gray-900">2. In specialized education</label>
+                        <label for="edk1-2" class="ms-2 text-sm text-gray-900">2. In mainstream education institution, with inclusive classes/groups</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-3" name="edk1" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="edk1-3" class="ms-2 text-sm text-gray-900">3. Inclusive education</label>
+                        <label for="edk1-3" class="ms-2 text-sm text-gray-900">3. In specialized education institution</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-4" name="edk1" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -5437,19 +5451,19 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>EDK3. And in what grade?<small class="my-2 block italic text-red-500">FILL IN 0 (ZERO) FOR PREPARATORY CLASS</small></div>
+                <div>EDK3. And in what grade?<small class="my-2 block italic text-red-500">0. Preparatory class</small></div>
                 <div>
                     <select id="edk3" name="edk3" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
-                        <option value="0>0</option>
-                        <option value="1>1</option>
-                        <option value="2>2</option>
-                        <option value="3>3</option>
-                        <option value="4>4</option>
-                        <option value="5>5</option>
-                        <option value="6>6</option>
-                        <option value="7>7</option>
-                        <option value="8>8</option>
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
                         <option value="9">9</option>
                         <option value="10">10</option>
                         <option value="11">11</option>
